recent-topics: Add module.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -122,6 +122,7 @@
         "realm_icon": false,
         "realm_logo": false,
         "recent_senders": false,
+        "recent_topics": false,
         "reload": false,
         "reload_state": false,
         "reminder": false,
