modzulator: New tool for converting CJS modules to ES6 modules.
Signed-off-by: Anders Kaseorg <andersk@mit.edu>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,7 +73,10 @@
         "no-undef-init": "error",
         "no-unneeded-ternary": ["error", {"defaultAssignment": false}],
         "no-unused-expressions": "error",
-        "no-use-before-define": ["error", {"functions": false}],
+        "no-use-before-define": [
+            "error",
+            {"classes": false, "functions": false, "variables": false}
+        ],
         "no-useless-concat": "error",
         "no-useless-constructor": "error",
         "no-var": "error",
