settings: Add support for uploading logo for night mode.
This adds a new field named realm_night_logo which is used for
dispalying oragnisation logo when the user is in night mode.

Fixes #11176

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -121,6 +121,7 @@
         "reactions": false,
         "realm_icon": false,
         "realm_logo": false,
+        "realm_night_logo": false,
         "recent_senders": false,
         "reload": false,
         "reload_state": false,
