--- a/zerver/openapi/zulip.yaml
+++ b/zerver/openapi/zulip.yaml
@@ -1759,6 +1759,10 @@ paths:
                       type: string
                       description: The URI of the organization's top-left navbar logo
                         (usually a wide rectangular version of the logo).
+                    realm_night_logo:
+                      type: string
+                      description: The URI of the organization's top-left navbar logo in night_mode
+                        (usually a wide rectangular version of the logo).
                     realm_description:
                       type: string
                       description: HTML description of the organization, as
@@ -1771,6 +1775,7 @@ paths:
                         "msg": "",
                         "realm_icon": "https://secure.gravatar.com/avatar/62429d594b6ffc712f54aee976a18b44?d=identicon",
                         "realm_logo": "/static/images/logo/zulip-org-logo.png",
+                        "realm_night_logo": "static/images/logo/zulip-org-logo.png",
                         "realm_description": "<p>The Zulip development environment default organization.  It's great for testing!</p>",
                         "email_auth_enabled": true,
                         "zulip_version": "1.9.0-rc1+git",
