billing: Add node tests for helpers.js.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,6 +69,7 @@
         "hash_util": false,
         "hashchange": false,
         "helpers": false,
+        "history": false,
         "home_msg_list": false,
         "hotspots": false,
         "i18n": false,
@@ -86,6 +87,7 @@
         "localStorage": false,
         "local_message": false,
         "localstorage": false,
+        "location": false,
         "markdown": false,
         "marked": false,
         "md5": false,
