requirements: Add line_profiler.
This library is super useful for doing line-by-line profiling of code
paths that we want to be really fast.

--- a/requirements/common.in
+++ b/requirements/common.in
@@ -78,6 +78,9 @@ httplib2==0.12.0
 # Needed for hipchat import
 hypchat==0.21
 
+# For doing highly usable Python profiling
+line_profiler==2.1.2
+
 # Needed for inlining the CSS in emails
 premailer==3.2.0
 
