lint: Run pyflakes and pycodestyle via Flake8.
Flake8 automatically gives us support for noqa comments, parallelism,
configuration files, plugins, and easy editor integration.

Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
-[pycodestyle]
+[flake8]
 ignore =
     # These rules are ignored for the reasons explained in the comments.
-    # See https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes for
+    # See https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
+    # and https://flake8.pycqa.org/en/latest/user/error-codes.html for
     # error code definitions.
 
     # All formatting is handled by Black.
@@ -27,3 +28,8 @@ ignore =
     # "do not assign a lambda expression, use a def"
     # Fixing these would probably reduce readability in most cases.
     E731,
+
+per-file-ignores =
+    zproject/settings.py:F405
+    zproject/slack_importer_test_settings.py:F405
+    zproject/test_settings.py:F405
