--- a/requirements/dev.in
+++ b/requirements/dev.in
@@ -29,14 +29,11 @@ isort
 # For doing highly usable Python profiling
 line-profiler
 
-# for pep8 linter
-pycodestyle
-
 # Python reformatter
 black
 
-# Needed to run pyflakes linter
-pyflakes
+# For running pyflakes and pycodestyle linters
+flake8
 
 # Needed for watching file changes
 pyinotify
