lint: Disable pycodestyle E203.
Signed-off-by: Anders Kaseorg <anders@zulip.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,10 @@
 ignore =
     # Each of these rules are ignored for the explained reason.
 
+    # "whitespace before ':'"
+    # Black disagrees with this.
+    E203,
+
     # "multiple spaces before operator"
     # There are several typos here, but also several instances that are
     # being used for alignment in dict keys/values using the `dict`
