display_setting: Add user display settings for hiding inline image.
New display setting that allow users to hide inline image preview.
Selecting 'Hide inline image preview' in User Display Setting
would dynamically wrap the message-inline image in details tag
with attribute loading="lazy" to load images only when needed.
The html structure would look like:
<div class=".message_inline_image">
    <summary>My image</summary>
    <details>
        <a href="/my_image.png" title="My image">
            <img src="/my_image.png" loading="lazy">
        </a>
    </details>
</div>

Fixes: #16300.

--- a/zerver/openapi/zulip.yaml
+++ b/zerver/openapi/zulip.yaml
@@ -6687,6 +6687,12 @@ paths:
                           Present if `update_display_settings` is present in `fetch_event_types`.
 
                           Whether the user has chosen for the layout width to be fluid.
+                      hide_inline_image_preview:
+                        type: boolean
+                        description: |
+                          Present if `update_display_settings` is present in `fetch_event_types`.
+
+                          Whether the user has chosen to hide inline message image preview.
                       high_contrast_mode:
                         type: boolean
                         description: |
