--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autosize": "^4.0.2",
     "babel-loader": "^8.0.6",
     "blueimp-md5": "^2.10.0",
+    "bootstrap-5": "npm:bootstrap@next",
     "cache-loader": "^4.0.0",
     "clean-css": "^4.2.1",
     "clipboard": "^2.0.4",
@@ -48,6 +49,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "plotly.js": "^1.48.1",
     "postcss": "^8.0.3",
+    "popper.js": "^1.16.1",
     "postcss-calc": "^7.0.1",
     "postcss-extend-rule": "^3.0.0",
     "postcss-loader": "^4.0.2",
