--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "regenerator-runtime": "^0.13.3",
     "script-loader": "^0.7.2",
     "shebang-loader": "^0.0.1",
-    "simplebar": "^6.0.0-beta.3",
+    "simplebar": "^5.2.1",
     "sortablejs": "^1.9.0",
     "sorttable": "^1.0.2",
     "source-sans-pro": "^3.6.0",
