--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "core-js": "^3.6.5",
     "css-loader": "^5.0.0",
     "css.escape": "^1.5.1",
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.1.1",
     "emoji-datasource-google": "^6.0.0",
     "emoji-datasource-google-blob": "npm:emoji-datasource-google@^3.0.0",
     "emoji-datasource-twitter": "^6.0.0",
@@ -45,8 +47,6 @@
     "katex": "^0.12.0",
     "lodash": "^4.17.19",
     "mini-css-extract-plugin": "^1.2.0",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.25",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "plotly.js": "^1.48.1",
     "postcss": "^8.0.3",
@@ -98,6 +98,7 @@
     "eslint-plugin-import": "^2.22.0",
     "js-yaml": "^4.0.0",
     "jsdom": "^16.1.0",
+    "mockdate": "^3.0.2",
     "nyc": "^15.0.0",
     "openapi-examples-validator": "^4.0.0",
     "prettier": "^2.0.5",
