--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -185,6 +185,7 @@
                 "local_message": false,
                 "localstorage": false,
                 "location": false,
+                "login_to_access": false,
                 "markdown": false,
                 "message_edit": false,
                 "message_events": false,
