login_to_access: Modal which blocks access for web_public_visitor.
We will use this modal for any narrow / hash we don't want
web public visitor to access.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -176,6 +176,7 @@
                 "local_message": false,
                 "localstorage": false,
                 "location": false,
+                "login_to_access": false,
                 "markdown": false,
                 "message_edit": false,
                 "message_edit_history": false,
