streams: Allow creating user group pills to submit Add subscriber form.
We update the pills typeahead logic to also include user group
results and pass the "user_group" key in `opts` to enable this
option for the Add subscriber form.

The changes includes:
* Exporting the `query_matches_name_description` function, to
  deduplicate the typeahead `matcher` logic.
* Creating a `people.is_known_user` function, to deduplicate
  the typeahead `sorter` logic.
* Removing the `!sub` condition  in `stream_pill.js` which
  was only added to check for undefined.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -301,6 +301,7 @@
                 "upload": false,
                 "upload_widget": false,
                 "user_events": false,
+                "user_group_pill": false,
                 "user_groups": false,
                 "user_pill": false,
                 "user_status": false,
