zcommand: Add new command to change themes.
Fixes: #15818

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -183,7 +183,6 @@
                 "narrow": false,
                 "narrow_state": false,
                 "navigate": false,
-                "night_mode": false,
                 "notifications": false,
                 "overlays": false,
                 "padded_widget": false,
@@ -257,6 +256,7 @@
                 "subs": false,
                 "message_view_header": false,
                 "templates": false,
+                "theme": false,
                 "tictactoe_widget": false,
                 "timerender": false,
                 "todo_widget": false,
