--- a/zerver/openapi/zulip.yaml
+++ b/zerver/openapi/zulip.yaml
@@ -7564,6 +7564,10 @@ paths:
                             description: |
                               Whether the user can authenticate using their Azure Active Directory account.
                             type: boolean
+                          facebook:
+                            description: |
+                              Whether the user can authenticate using their facebook account.
+                            type: boolean
                           gitlab:
                             description: |
                               Whether the user can authenticate using their GitLab account.
@@ -7694,6 +7698,7 @@ paths:
                             "remoteuser": false,
                             "github": true,
                             "azuread": false,
+                            "facebook": false,
                             "google": true,
                             "saml": true,
                           },
